Preparing a page with a pancake recipe
A page with a pancake recipe has been preliminarily prepared. I added a photo illustrating the dish and a step-by-step description of the recipe.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,35 @@
   </head>
   <body>
     <h1>Przepisy kulinarne</h1>
-    <a href="./recipes/pancakes-in-sauce.html"
+    <a
+      href="./recipes/pancakes-in-sauce.html"
+      target="_blank"
+      rel="noreferrer noopener"
       >Naleśniki z kurczakiem w sosie bolognese</a
     ><br />
-    <a href="./recipes/pasta-with-chicken.html"
+    <a
+      href="./recipes/pasta-with-chicken.html"
+      target="_blank"
+      rel="noreferrer noopener"
       >Makaron z kurczakiem i pieczarkami</a
     ><br />
-    <a href="./recipes/rice-salad.html">Sałatka ryżowa z tuńczykiem</a><br />
-    <a href="./recipes/spaghetti-bolognese.html"
+    <a
+      href="./recipes/rice-salad.html"
+      target="_blank"
+      rel="noreferrer noopener"
+      >Sałatka ryżowa z tuńczykiem</a
+    ><br />
+    <a
+      href="./recipes/spaghetti-bolognese.html"
+      target="_blank"
+      rel="noreferrer noopener"
       >Spaghetti bolognese z warzywami i pieczarkami</a
     ><br />
-    <a href="./recipes/spanish-omelet.html">Hiszpański omlet</a><br />
+    <a
+      href="./recipes/spanish-omelet.html"
+      target="_blank"
+      rel="noreferrer noopener"
+      >Hiszpański omlet</a
+    ><br />
   </body>
 </html>
